Bug 501440 - Support selecting text in touch enabled devices. r=jmathies, sr=vladimir